--- a/css/master.css
+++ b/css/master.css
@@ -308,7 +308,7 @@ Header Wrapper
     left: -100px; }
   /*custom selector - added by PG */
   .menu-name-main-menu > .menu > li.children--4 > ul {
-    width: 555px;
+    width: 510px;
     left: -100px;
     padding: 12px 0px 12px 30px; }
   /* line 198, ../_sass/components/header/_nav.scss */
@@ -346,7 +346,7 @@ Header Wrapper
     margin-bottom: 0;
     margin-top: 15px;}
   
-  .block-menu-block .menu-level-1 > .menu .menu li:nth-child(-n+3) span{
+  .block-menu-block .menu-level-1 > .menu .menu li:nth-child(-n+2) span{
     margin-top: 0;
   }
 
